# darc

./: .gitattributes  README.md  configure.ac
src/: Makefile.am  Makefile.am.shadow  configure.ac.shadow  ftell.c  help  loe.pl  main.loe.pl.c
